# advent-of-code-2021

./: Cargo.toml  README.md
notes/: day08.txt  day14.txt  day17.calca  day20.txt  day24-scratch.rs
